--- a/app/globals.css
+++ b/app/globals.css
@@ -200,3 +200,83 @@
     -moz-appearance: textfield;
   }
 }
+
+.animate-slide-fade {
+  animation: slideFade 0.8s ease-out forwards;
+}
+
+.animate-img-move {
+  animation: imgMove 1s ease-out forwards;
+}
+
+.revealing {
+  animation: auto linear reveal both;
+  animation-timeline: view();
+  animation-range: entry 25% cover 50%;
+}
+
+.in-out {
+  animation: linear animate-in-and-out;
+  animation-timeline: view();
+  /* animation-range: entry 100% exit 60%; */
+}
+
+@keyframes slideFade {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
+    clip-path: inset(0% 100% 0% 0%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+    clip-path: inset(0%);
+  }
+}
+
+@keyframes imgMove {
+  0% {
+    opacity: 0.2;
+    clip-path: inset(30% 50%);
+  }
+
+  100% {
+    opacity: 1;
+    clip-path: inset(0%);
+  }
+}
+
+@keyframes reveal {
+  from {
+    opacity: 0;
+    scale: 0.5;
+  }
+
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+@keyframes animate-in-and-out {
+  entry 0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+
+  entry 100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  exit 0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  exit 100% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+}
