--- a/app/globals.css
+++ b/app/globals.css
@@ -244,7 +244,7 @@
 .revealing {
   animation: auto linear reveal both;
   animation-timeline: view();
-  animation-range: entry 25% cover 50%;
+  animation-range: entry 0% cover 40%;
 }
 
 .in-out {
@@ -333,8 +333,8 @@
 
 @keyframes reveal {
   from {
-    opacity: 0.6;
-    scale: 0.7;
+    opacity: 0;
+    scale: 0.5;
   }
 
   to {
@@ -376,15 +376,7 @@
 }
 
 @media (min-width: 640px) {
-  @keyframes reveal {
-    from {
-      opacity: 0;
-      scale: 0.5;
-    }
-
-    to {
-      opacity: 1;
-      scale: 1;
-    }
+  .revealing {
+    animation-range: entry 25% cover 50%;
   }
 }
